Manuscript finished 1st edition. 2016-4-4

--- a/pkuthss/thesis.bib
+++ b/pkuthss/thesis.bib
@@ -1,22 +1,448 @@
 % vim:ts=4:sw=4
-
-@article{test-en,
-	author = {Author},
-	title = {Title},
-	type = {J},
-	journal = {Journal},
-	date = {2014-04-01},
-	language = {english},
+%%%%%%%%
+@article{shannon1945mathematical,
+  title={A mathematical theory of cryptography},
+  author={Shannon, Claude E},
+  journal={Memorandum MM},
+  volume={45},
+  pages={110--02},
+  year={1945}
+}
+@article{roch1999biopolitics,
+  author={Roch,Axel},
+  year={1999},
+  title={BIOPOLITICS AND INTUITIVE ALGEBRA IN THE MATHEMATIZATION OF CRYPTOLOGY? A REVIEW OF SHANNON'S "A MATHEMATICAL THEORY OF CRYPTOGRAPHY" FROM 1945},
+  journal={Cryptologia},
+  volume={23},
+  number={3},
+  pages={261-266},
+  abstract={Communication theory of secrecy systems as well as information theory in terms of Claude E. Shannon not only explains the solvability but also explores the theoretical secrecy of cryptograms by modeling information sources in higher order statistics, so-called a priori transition probabilities. In order to understand messages as stochastic processes in time, the mathematical theory of communication is historically traced back to World War II and into two fields of knowledge: biopolitics and intuitive algebra.},
+  keywords={history of information theory; genetics and cryptology; Algebraic theory of cryptology},
+  isbn={0161-1194},
+  language={English},
+  url={http://pku.summon.serialssolutions.com/2.0.0/link/0/eLvHCXMw3V1NaxsxEBVOT4ES2qYlblIQgSbQskHSSrL3UIpTYkqTQmmdSy-LrJXo0mZtkg00_RP9y52xtB92ID-gB1-0lr3sm52ZJ2beEJKKE5Zs-ATnVca8NQzSbeWVttpDrPUWslmjU4_HH98_jy--iOmZ-jQYNMWF3dr_APxpiXMPylZ-uYSoEgqEcKQHkOOmtPGqUWz906aN9vpuWYf-lXQKPqPX2PLDVNUizF95LYTpdiPIq3bIu-4Xggw2fC-0r_AsiDm2kgjN35RtUJj8dr_efl3Ec7Ui9uVlbclqMJzZvYkg64WcmFkmnIeBxicuOlsFDFZFKezojUP3cbS6tO9ag2j7hjo2sFkBvn50hErpV0Vp63euSi6_bQENHyMZZ6fnLQFPOQ_zKeO9rOUia0q19yLzKt2YPSE7kSfQScD3KRm46hmO2I7lOLvkbw9nCjjTFmcacYYVCsDQDZzpwtMO5_d0QgPKuB5RPr6hh4b2EaYB4W5vQPiQIr4U8X1OLqdnsw8fkzhdI7HIihMtvS2Y1_O5g48cCTnyXnJwwxayYqM0UFlnBbMS3txCFNq4OeM45RZIgwaW8II8NtiFUdWrbs1ij9DUpjhHpRhrK6VxWSYhhcx0xmXhpZJ8SN40DzxfBjWVnDcitYAK8FEkLBD4MsaGRPYhyeuViflgXQ9tO2igy80czwttfZMLyNVGcB9qSPbby_Gt7V19-fDmfbLd2f4BeVRf37pXZGv58_YfevST3g},
+}
+@article{mahmoud2013combined,
+  title={Combined Modeling and Side Channel Attacks on Strong PUFs.},
+  author={Mahmoud, Ahmed and R{\"u}hrmair, Ulrich and Majzoobi, Mehrdad and Koushanfar, Farinaz},
+  journal={IACR Cryptology ePrint Archive},
+  volume={2013},
+  pages={632},
+  year={2013}
+}
+@article{ruhrmair2013puf,
+  title={PUF modeling attacks on simulated and silicon data},
+  author={Ruhrmair, Ulrich and Solter, Jan and Sehnke, Frank and Xu, Xiaolin and Mahmoud, Ali and Stoyanova, Vera and Dror, Gideon and Schmidhuber, Jurgen and Burleson, Wayne and Devadas, Srinivas},
+  journal={Information Forensics and Security, IEEE Transactions on},
+  volume={8},
+  number={11},
+  pages={1876--1891},
+  year={2013},
+  publisher={IEEE}
+}
+@inproceedings{helfmeier2013cloning,
+  title={Cloning physically unclonable functions},
+  author={Helfmeier, Clemens and Boit, Christian and Nedospasov, Dmitry and Seifert, Jean-Pierre},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2013 IEEE International Symposium on},
+  pages={1--6},
+  year={2013},
+  organization={IEEE}
+}
+@inproceedings{merli2013localized,
+  title={Localized electromagnetic analysis of RO PUFs},
+  author={Merli, Dominik and Heyszl, Johann and Heinz, Benedikt and Schuster, Daniel and Stumpf, Frederic and Sigl, Georg},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2013 IEEE International Symposium on},
+  pages={19--24},
+  year={2013},
+  organization={IEEE}
+}
+@inproceedings{delvaux2013side,
+  title={Side channel modeling attacks on 65nm arbiter PUFs exploiting CMOS device noise},
+  author={Delvaux, Jeroen and Verbauwhede, Ingrid},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2013 IEEE International Symposium on},
+  pages={137--142},
+  year={2013},
+  organization={IEEE}
+}
+@inproceedings{ruhrmair2013pufs,
+  title={Pufs in security protocols: Attack models and security evaluations},
+  author={Ruhrmair, Ulrich and van Dijk, Marius},
+  booktitle={Security and Privacy (SP), 2013 IEEE Symposium on},
+  pages={286--300},
+  year={2013},
+  organization={IEEE}
+}
+@inproceedings{xu2014hybrid,
+  title={Hybrid side-channel/machine-learning attacks on PUFs: a new threat?},
+  author={Xu, Xiaolin and Burleson, Wayne},
+  booktitle={Proceedings of the conference on Design, Automation \& Test in Europe},
+  pages={349},
+  year={2014},
+  organization={European Design and Automation Association}
+}
+@inproceedings{van2014protocol,
+  title={Protocol attacks on advanced PUF protocols and countermeasures},
+  author={van Dijk, Marten and R{\"u}hrmair, Ulrich},
+  booktitle={Proceedings of the conference on Design, Automation \& Test in Europe},
+  pages={351},
+  year={2014},
+  organization={European Design and Automation Association}
+}
+@inproceedings{ruhrmair2014puf,
+  title={PUF modeling attacks: an introduction and overview},
+  author={R{\"u}hrmair, Ulrich and S{\"o}lter, Jan},
+  booktitle={Proceedings of the conference on Design, Automation \& Test in Europe},
+  pages={348},
+  year={2014},
+  organization={European Design and Automation Association}
+}
+@inproceedings{spain2014robust,
+  title={Robust keys from physical unclonable functions},
+  author={Spain, Malcolm and Fuller, Benjamin and Ingols, Kyle and Cunningham, Robert},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2014 IEEE International Symposium on},
+  pages={88--92},
+  year={2014},
+  organization={IEEE}
+}
+@incollection{tobisch2015scaling,
+  title={On the Scaling of Machine Learning Attacks on PUFs with Application to Noise Bifurcation},
+  author={Tobisch, Johannes and Becker, Georg T},
+  booktitle={Radio Frequency Identification},
+  pages={17--31},
+  year={2015},
+  publisher={Springer}
+}
+@inproceedings{ruhrmair2014pufs,
+  title={PUFs at a glance},
+  author={Ruhrmair, Ulrich and Holcomb, Daniel E},
+  booktitle={Design, Automation and Test in Europe Conference and Exhibition (DATE), 2014},
+  pages={1--6},
+  year={2014},
+  organization={IEEE}
 }
 
-@online{test-zh,
-	author = {作者},
-	title = {标题},
-	type = {J},
-	journal = {期刊},
-	date = {2014-04-01},
-	language = {chinese},
+@inproceedings{lee2004technique,
+  title={A technique to build a secret key in integrated circuits for identification and authentication applications},
+  author={Lee, Jae W and Lim, Daihyun and Gassend, Blaise and Suh, G Edward and Van Dijk, Marten and Devadas, Srinivas},
+  booktitle={VLSI Circuits, 2004. Digest of Technical Papers. 2004 Symposium on},
+  pages={176--179},
+  year={2004},
+  organization={IEEE}
 }
+@inproceedings{suh2007physical,
+  title={Physical unclonable functions for device authentication and secret key generation},
+  author={Suh, G Edward and Devadas, Srinivas},
+  booktitle={Proceedings of the 44th annual Design Automation Conference},
+  pages={9--14},
+  year={2007},
+  organization={ACM}
+}
+@incollection{morozov2010analysis,
+  title={An analysis of delay based PUF implementations on FPGA},
+  author={Morozov, Sergey and Maiti, Abhranil and Schaumont, Patrick},
+  booktitle={Reconfigurable Computing: Architectures, Tools and Applications},
+  pages={382--387},
+  year={2010},
+  publisher={Springer}
+}
+@inproceedings{majzoobi2008lightweight,
+  title={Lightweight secure pufs},
+  author={Majzoobi, Mehrdad and Koushanfar, Farinaz and Potkonjak, Miodrag},
+  booktitle={Proceedings of the 2008 IEEE/ACM International Conference on Computer-Aided Design},
+  pages={670--673},
+  year={2008},
+  organization={IEEE Press}
+}
+@inproceedings{majzoobi2010fpga,
+  title={FPGA PUF using programmable delay lines},
+  author={Majzoobi, Mehrdad and Koushanfar, Farinaz and Devadas, Srinivas},
+  booktitle={Information Forensics and Security (WIFS), 2010 IEEE International Workshop on},
+  pages={1--6},
+  year={2010},
+  organization={IEEE}
+}
+@inproceedings{merli2010improving,
+  title={Improving the quality of ring oscillator PUFs on FPGAs},
+  author={Merli, Dominik and Stumpf, Frederic and Eckert, Claudia},
+  booktitle={Proceedings of the 5th Workshop on Embedded Systems Security},
+  pages={9},
+  year={2010},
+  organization={ACM}
+}
+@incollection{suzuki2010glitch,
+  title={The glitch PUF: A new delay-PUF architecture exploiting glitch shapes},
+  author={Suzuki, Daisuke and Shimizu, Koichi},
+  booktitle={Cryptographic Hardware and Embedded Systems, CHES 2010},
+  pages={366--382},
+  year={2010},
+  publisher={Springer}
+}
+@article{maiti2011improved,
+  title={Improved ring oscillator PUF: an FPGA-friendly secure primitive},
+  author={Maiti, Abhranil and Schaumont, Patrick},
+  journal={Journal of cryptology},
+  volume={24},
+  number={2},
+  pages={375--397},
+  year={2011},
+  publisher={Springer}
+}
+@inproceedings{chen2011bistable,
+  title={The bistable ring puf: A new architecture for strong physical unclonable functions},
+  author={Chen, Qingqing and Csaba, Gy{\"o}rgy and Lugli, Paolo and Schlichtmann, Ulf and R{\"u}hrmair, Ulrich},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2011 IEEE International Symposium on},
+  pages={134--141},
+  year={2011},
+  organization={IEEE}
+}
+@inproceedings{yin2010lisa,
+  title={LISA: Maximizing RO PUF's secret extraction},
+  author={Yin, Chi-En and Qu, Gang},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2010 IEEE International Symposium on},
+  pages={100--105},
+  year={2010},
+  organization={IEEE}
+}
+@article{koeberl2012practical,
+  title={A practical device authentication scheme using SRAM PUFs},
+  author={Koeberl, Patrick and Li, Jiangtao and Maes, Roel and Rajan, Anand and Vishik, Claire and W{\'o}jcik, Marcin and Wu, Wei},
+  journal={Journal of Cryptographic Engineering},
+  volume={2},
+  number={4},
+  pages={255--269},
+  year={2012},
+  publisher={Springer}
+}
+@inproceedings{xu2013digital,
+  title={Digital bimodal function: an ultra-low energy security primitive},
+  author={Xu, Teng and Wendt, James B and Potkonjak, Miodrag},
+  booktitle={Low Power Electronics and Design (ISLPED), 2013 IEEE International Symposium on},
+  pages={292--296},
+  year={2013},
+  organization={IEEE}
+}
+@inproceedings{wendt2013bidirectional,
+  title={The bidirectional polyomino partitioned PPUF as a hardware security primitive},
+  author={Wendt, James B and Potkonjak, Miodrag},
+  booktitle={Global Conference on Signal and Information Processing (GlobalSIP), 2013 IEEE},
+  pages={257--260},
+  year={2013},
+  organization={IEEE}
+}
+@inproceedings{yin2013design,
+  title={Design and implementation of a group-based RO PUF},
+  author={Yin, Chi-En and Qu, Gang and Zhou, Qiang},
+  booktitle={Proceedings of the Conference on Design, Automation and Test in Europe},
+  pages={416--421},
+  year={2013},
+  organization={EDA Consortium}
+}
+@inproceedings{du2014novel,
+  title={A Novel Relative Frequency Based Ring Oscillator Physical Unclonable Function},
+  author={Du, Chaohui and Bai, Guoqiang},
+  booktitle={Computational Science and Engineering (CSE), 2014 IEEE 17th International Conference on},
+  pages={569--575},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{xiao2014bit,
+  title={Bit selection algorithm suitable for high-volume production of SRAM-PUF},
+  author={Xiao, Kan and Rahman, Md Tauhidur and Forte, Domenic and Huang, Yu and Su, Mei and Tehranipoor, Mohammad},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2014 IEEE International Symposium on},
+  pages={101--106},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{sahoo2014composite,
+  title={Composite PUF: A new design paradigm for Physically Unclonable Functions on FPGA},
+  author={Sahoo, Durga Prasad and Saha, Simanto and Mukhopadhyay, Debdeep and Chakraborty, Rajat Subhra and Kapoor, Hitesh},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2014 IEEE International Symposium on},
+  pages={50--55},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{maes2014countering,
+  title={Countering the effects of silicon aging on SRAM PUFs},
+  author={Maes, Roel and van der Leest, Vincent},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2014 IEEE International Symposium on},
+  pages={148--153},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{iyengar2014dwm,
+  title={DWM-PUF: A low-overhead, memory-based security primitive},
+  author={Iyengar, Anirudh and Ramclam, Kenneth and Ghosh, Sudip},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2014 IEEE International Symposium on},
+  pages={154--159},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{kumar2014design,
+  title={On design of a highly secure PUF based on non-linear current mirrors},
+  author={Kumar, Ravindra and Burleson, Wayne},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2014 IEEE International Symposium on},
+  pages={38--43},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{mathew201416,
+  title={16.2 A 0.19 pJ/b PVT-variation-tolerant hybrid physically unclonable function circuit for 100\% stable secure key generation in 22nm CMOS},
+  author={Mathew, Sanu K and Satpathy, Sudhir K and Anders, Mark A and Kaul, Himanshu and Hsu, Steven K and Agarwal, Abhishek and Chen, Gregory K and Parker, Rachael J and Krishnamurthy, Ram K and De, Vivek},
+  booktitle={Solid-State Circuits Conference Digest of Technical Papers (ISSCC), 2014 IEEE International},
+  pages={278--279},
+  year={2014},
+  organization={IEEE}
+}
+@article{machida2015new,
+  title={A New Arbiter PUF for Enhancing Unpredictability on FPGA},
+  author={Machida, Takanori and Yamamoto, Dai and Iwamoto, Mitsugu and Sakiyama, Kazuo},
+  journal={The Scientific World Journal},
+  year={2015},
+  publisher={Hindawi Publishing Corporation}
+}
+@article{zhang2015puf,
+  title={A PUF-FSM binding scheme for FPGA IP protection and pay-per-device licensing},
+  author={Zhang, Jiliang and Lin, Yaping and Lyu, Yongqiang and Qu, Gang},
+  journal={Information Forensics and Security, IEEE Transactions on},
+  volume={10},
+  number={6},
+  pages={1137--1150},
+  year={2015},
+  publisher={IEEE}
+}
+@article{liu2015experimental,
+  title={Experimental Characterization of Physical Unclonable Function Based on 1 kb Resistive Random Access Memory Arrays},
+  author={Liu, Rui and Wu, Huaqiang and Pang, Yachuan and Qian, He and Yu, Shimeng},
+  journal={Electron Device Letters, IEEE},
+  volume={36},
+  number={12},
+  pages={1380--1383},
+  year={2015},
+  publisher={IEEE}
+}
+@article{chen2015utilizing,
+  title={Utilizing the variability of resistive random access memory to implement reconfigurable physical unclonable functions},
+  author={Chen, An},
+  journal={Electron Device Letters, IEEE},
+  volume={36},
+  number={2},
+  pages={138--140},
+  year={2015},
+  publisher={IEEE}
+}
+@article{bainovel,
+  title={A Novel Thyristor-Based Silicon Physical Unclonable Function},
+  author={Bai, Chuang and Zou, Xuecheng and Dai, Kui},
+  publisher={IEEE}
+}
+@incollection{ruhrmair2010oblivious,
+  title={Oblivious transfer based on physical unclonable functions},
+  author={R{\"u}hrmair, Ulrich},
+  booktitle={Trust and Trustworthy Computing},
+  pages={430--440},
+  year={2010},
+  publisher={Springer}
+}
+@inproceedings{armknecht2011formalization,
+  title={A formalization of the security features of physical functions},
+  author={Armknecht, Frederik and Maes, Roel and Sadeghi, Ahmad-Reza and Standaert, Francois-Xavier and Wachsmann, Christian},
+  booktitle={Security and Privacy (SP), 2011 IEEE Symposium on},
+  pages={397--412},
+  year={2011},
+  organization={IEEE}
+}
+@inproceedings{hori2010quantitative,
+  title={Quantitative and statistical performance evaluation of arbiter physical unclonable functions on FPGAs},
+  author={Hori, Yohei and Yoshida, Takahiro and Katashita, Toshihiro and Satoh, Akashi},
+  booktitle={Reconfigurable Computing and FPGAs (ReConFig), 2010 International Conference on},
+  pages={298--303},
+  year={2010},
+  organization={IEEE}
+}
+@inproceedings{chen2012characterization,
+  title={Characterization of the bistable ring PUF},
+  author={Chen, Qingqing and Csaba, Gy{\"o}rgy and Lugli, Paolo and Schlichtmann, Ulf and R{\"u}hrmair, Ulrich},
+  booktitle={Design, Automation \& Test in Europe Conference \& Exhibition (DATE), 2012},
+  pages={1459--1462},
+  year={2012},
+  organization={IEEE}
+}
+@incollection{katzenbeisser2012pufs,
+  title={PUFs: Myth, fact or busted? A security evaluation of physically unclonable functions (PUFs) cast in silicon},
+  author={Katzenbeisser, Stefan and Kocaba{\c{s}}, {\"U}nal and Ro{\v{z}}i{\'c}, Vladimir and Sadeghi, Ahmad-Reza and Verbauwhede, Ingrid and Wachsmann, Christian},
+  booktitle={Cryptographic Hardware and Embedded Systems--CHES 2012},
+  pages={283--301},
+  year={2012},
+  publisher={Springer}
+}
+@inproceedings{schrijen2012comparative,
+  title={Comparative analysis of SRAM memories used as PUF primitives},
+  author={Schrijen, Geert-Jan and van der Leest, Vincent},
+  booktitle={Proceedings of the Conference on Design, Automation and Test in Europe},
+  pages={1319--1324},
+  year={2012},
+  organization={EDA Consortium}
+}
+@incollection{maiti2013systematic,
+  title={A systematic method to evaluate and compare the performance of physical unclonable functions},
+  author={Maiti, Abhranil and Gunreddy, Vikash and Schaumont, Patrick},
+  booktitle={Embedded systems design with FPGAs},
+  pages={245--267},
+  year={2013},
+  publisher={Springer}
+}
+@inproceedings{van2013bias,
+  title={Bias-based modeling and entropy analysis of PUFs},
+  author={Van Den Berg, Robbert and Skoric, Boris and van der Leest, Vincent},
+  booktitle={Proceedings of the 3rd international workshop on Trustworthy embedded devices},
+  pages={13--20},
+  year={2013},
+  organization={ACM}
+}
+@article{potkonjak2014public,
+  title={Public physical unclonable functions},
+  author={Potkonjak, Miodrag and Goudar, Vishwa},
+  journal={Proceedings of the IEEE},
+  volume={102},
+  number={8},
+  pages={1142--1156},
+  year={2014},
+  publisher={IEEE}
+}
+@inproceedings{rostami2014quo,
+  title={Quo vadis, PUF?: trends and challenges of emerging physical-disorder based security},
+  author={Rostami, Masoud and Wendt, James B and Potkonjak, Miodrag and Koushanfar, Farinaz},
+  booktitle={Proceedings of the conference on Design, Automation \& Test in Europe},
+  pages={352},
+  year={2014},
+  organization={European Design and Automation Association}
+}
+@inproceedings{yu2014noise,
+  title={A noise bifurcation architecture for linear additive physical functions},
+  author={Yu, Meng-Day and Verbauwhede, Ingrid and Devadas, Srinivas and M'Raïhi, David},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2014 IEEE International Symposium on},
+  pages={124--129},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{koeberl2014entropy,
+  title={Entropy loss in PUF-based key generation schemes: The repetition code pitfall},
+  author={Koeberl, Patrick and Li, Jiangtao and Rajan, Anand and Wu, Wei},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2014 IEEE International Symposium on},
+  pages={44--49},
+  year={2014},
+  organization={IEEE}
+}
+@inproceedings{pehl2014advanced,
+  title={Advanced performance metrics for physical unclonable functions},
+  author={Pehl, Michael and Punnakkal, Akshara Ranjit and Hiller, Matthias and Graeb, Helmut},
+  booktitle={Integrated Circuits (ISIC), 2014 14th International Symposium on},
+  pages={136--139},
+  year={2014},
+  organization={IEEE}
+}
+
+
 
 %%%%%%%%%%%%%%%%%%我是华丽的分割线%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @online{cortes1995support,
@@ -151,6 +577,14 @@
   pages={1459--1462},
   year={2012},
   language = {english},
+  organization={IEEE}
+}
+@inproceedings{mathew201416,
+  title={16.2 A 0.19 pJ/b PVT-variation-tolerant hybrid physically unclonable function circuit for 100\% stable secure key generation in 22nm CMOS},
+  author={Mathew, Sanu K and Satpathy, Sudhir K and Anders, Mark A and Kaul, Himanshu and Hsu, Steven K and Agarwal, Abhishek and Chen, Gregory K and Parker, Rachael J and Krishnamurthy, Ram K and De, Vivek},
+  booktitle={Solid-State Circuits Conference Digest of Technical Papers (ISSCC), 2014 IEEE International},
+  pages={278--279},
+  year={2014},
   organization={IEEE}
 }
 @online{schuster2014evaluation,
