--- a/pkuthss/thesis.tex
+++ b/pkuthss/thesis.tex
@@ -35,7 +35,7 @@
 % 设定文档的基本信息。
 \pkuthssinfo{
 	cthesisname = {硕士研究生学位论文}, ethesisname = {Master Thesis},
-	ctitle = {基于FPGA实现的高不可预测性PUF电路设计}, etitle = {Design methodology of Unpredictable PUFs based on FPGA Implementation},
+	ctitle = {高不可预测性PUF电路设计}, etitle = {Design methodology of Unpredictable Physical Unclonable Functions},
 	cauthor = {唐文懿},
 	eauthor = {Wenyi Tang},
 	studentid = {1301214150},
@@ -44,7 +44,8 @@
 	cmajor = {微电子学与固体物理学}, emajor = {Microelectronics},
 	direction = {系统集成芯片设计及设计方法学},
 	cmentor = {贾嵩}, ementor = {Prof.\ Song Jia},
-	ckeywords = {其一，其二}, ekeywords = {First, Second}
+	ckeywords = {芯片安全，密码学，PUF，数字电路设计},
+	ekeywords = {Physical Unclonable Function, Cryptography, chip security, digital circuit design}
 }
 % 载入参考文献数据库（注意不要省略“.bib”）。
 \addbibresource{thesis.bib}
