mod 2nd edition by intructions of Mentor

--- a/pkuthss/thesis.bib
+++ b/pkuthss/thesis.bib
@@ -441,7 +441,16 @@
   year={2014},
   organization={IEEE}
 }
-
+@article{ruhrmair2013practical,
+  title={On the practical use of physical unclonable functions in oblivious transfer and bit commitment protocols},
+  author={R{\"u}hrmair, Ulrich and van Dijk, Marten},
+  journal={Journal of Cryptographic Engineering},
+  volume={3},
+  number={1},
+  pages={17--28},
+  year={2013},
+  publisher={Springer}
+}
 
 
 %%%%%%%%%%%%%%%%%%我是华丽的分割线%%%%%%%%%%%%%%%%%%%%%%%%%%%
