--- a/pkuthss/thesis.bib
+++ b/pkuthss/thesis.bib
@@ -1,5 +1,6 @@
 % vim:ts=4:sw=4
 %%%%%%%%
+% Reviews
 @article{shannon1945mathematical,
   title={A mathematical theory of cryptography},
   author={Shannon, Claude E},
@@ -22,6 +23,41 @@
   language={English},
   url={http://pku.summon.serialssolutions.com/2.0.0/link/0/eLvHCXMw3V1NaxsxEBVOT4ES2qYlblIQgSbQskHSSrL3UIpTYkqTQmmdSy-LrJXo0mZtkg00_RP9y52xtB92ID-gB1-0lr3sm52ZJ2beEJKKE5Zs-ATnVca8NQzSbeWVttpDrPUWslmjU4_HH98_jy--iOmZ-jQYNMWF3dr_APxpiXMPylZ-uYSoEgqEcKQHkOOmtPGqUWz906aN9vpuWYf-lXQKPqPX2PLDVNUizF95LYTpdiPIq3bIu-4Xggw2fC-0r_AsiDm2kgjN35RtUJj8dr_efl3Ec7Ui9uVlbclqMJzZvYkg64WcmFkmnIeBxicuOlsFDFZFKezojUP3cbS6tO9ag2j7hjo2sFkBvn50hErpV0Vp63euSi6_bQENHyMZZ6fnLQFPOQ_zKeO9rOUia0q19yLzKt2YPSE7kSfQScD3KRm46hmO2I7lOLvkbw9nCjjTFmcacYYVCsDQDZzpwtMO5_d0QgPKuB5RPr6hh4b2EaYB4W5vQPiQIr4U8X1OLqdnsw8fkzhdI7HIihMtvS2Y1_O5g48cCTnyXnJwwxayYqM0UFlnBbMS3txCFNq4OeM45RZIgwaW8II8NtiFUdWrbs1ij9DUpjhHpRhrK6VxWSYhhcx0xmXhpZJ8SN40DzxfBjWVnDcitYAK8FEkLBD4MsaGRPYhyeuViflgXQ9tO2igy80czwttfZMLyNVGcB9qSPbby_Gt7V19-fDmfbLd2f4BeVRf37pXZGv58_YfevST3g},
 }
+@article{rijmen2001advanced,
+  title={Advanced encryption standard},
+  author={Rijmen, Vincent and Daemen, Joan},
+  journal={Proceedings of Federal Information Processing Standards Publications, National Institute of Standards and Technology},
+  pages={19--22},
+  year={2001}
+}
+@incollection{standaert2010introduction,
+  title={Introduction to side-channel attacks},
+  author={Standaert, Fran{\c{c}}ois-Xavier},
+  booktitle={Secure Integrated Circuits and Systems},
+  pages={27--42},
+  year={2010},
+  publisher={Springer}
+}
+@article{karaklajic2013hardware,
+  title={Hardware designer's guide to fault attacks},
+  author={Karaklajic, Dusko and Schmidt, Jorn-Marc and Verbauwhede, Ingrid},
+  journal={Very Large Scale Integration (VLSI) Systems, IEEE Transactions on},
+  volume={21},
+  number={12},
+  pages={2295--2306},
+  year={2013},
+  publisher={IEEE}
+}
+@incollection{rivain2010provably,
+  title={Provably secure higher-order masking of AES},
+  author={Rivain, Matthieu and Prouff, Emmanuel},
+  booktitle={Cryptographic Hardware and Embedded Systems, CHES 2010},
+  pages={413--427},
+  year={2010},
+  publisher={Springer}
+}
+
+% PUF attacks
 @article{mahmoud2013combined,
   title={Combined Modeling and Side Channel Attacks on Strong PUFs.},
   author={Mahmoud, Ahmed and R{\"u}hrmair, Ulrich and Majzoobi, Mehrdad and Koushanfar, Farinaz},
