--- a/pkuthss/thesis.tex
+++ b/pkuthss/thesis.tex
@@ -35,17 +35,18 @@
 % 设定文档的基本信息。
 \pkuthssinfo{
 	cthesisname = {硕士研究生学位论文}, ethesisname = {Master Thesis},
-	ctitle = {高不可预测性PUF电路设计}, etitle = {Design methodology of Unpredictable Physical Unclonable Functions},
+	ctitle = {双稳环路PUF建模攻击和新型随机脉冲PUF电路设计},
+	etitle = {Modeling Attack to BRPUF and Circuit Design of A Novel Random Pulse Arbiter PUF},
 	cauthor = {唐文懿},
 	eauthor = {Wenyi Tang},
 	studentid = {1301214150},
-	date = {2016年四月},
+	date = {二零一六年四月},
 	school = {信息科学技术学院},
-	cmajor = {微电子学与固体物理学}, emajor = {Microelectronics},
+	cmajor = {微电子学与固体电子学}, emajor = {Microelectronics},
 	direction = {系统集成芯片设计及设计方法学},
 	cmentor = {贾嵩}, ementor = {Prof.\ Song Jia},
-	ckeywords = {芯片安全，密码学，PUF，数字电路设计},
-	ekeywords = {Physical Unclonable Function, Cryptography, chip security, digital circuit design}
+	ckeywords = {物理不可克隆函数，建模攻击，FPGA，密码学},
+	ekeywords = {Physical Unclonable Function, Modeling attack, FPGAS, Cryptography}
 }
 % 载入参考文献数据库（注意不要省略“.bib”）。
 \addbibresource{thesis.bib}
