Add papers and rm null chaps

--- a/pkuthss/thesis.bib
+++ b/pkuthss/thesis.bib
@@ -30,6 +30,20 @@
   pages={19--22},
   year={2001}
 }
+@inproceedings{dodis2004fuzzy,
+  title={Fuzzy extractors: How to generate strong keys from biometrics and other noisy data},
+  author={Dodis, Yevgeniy and Reyzin, Leonid and Smith, Adam},
+  booktitle={Advances in cryptology-Eurocrypt 2004},
+  pages={523--540},
+  year={2004},
+  organization={Springer}
+}
+@book{guajardo2007fpga,
+  title={FPGA intrinsic PUFs and their use for IP protection},
+  author={Guajardo, Jorge and Kumar, Sandeep S and Schrijen, Geert-Jan and Tuyls, Pim},
+  year={2007},
+  publisher={Springer}
+}
 @incollection{standaert2010introduction,
   title={Introduction to side-channel attacks},
   author={Standaert, Fran{\c{c}}ois-Xavier},
@@ -55,6 +69,24 @@
   pages={413--427},
   year={2010},
   publisher={Springer}
+}
+@incollection{ruhrmair2012practical,
+  title={Practical security analysis of PUF-based two-player protocols},
+  author={R{\"u}hrmair, Ulrich and van Dijk, Marten},
+  booktitle={Cryptographic Hardware and Embedded Systems--CHES 2012},
+  pages={251--267},
+  year={2012},
+  publisher={Springer}
+}
+@article{rostami2014robust,
+  title={Robust and reverse-engineering resilient puf authentication and key-exchange by substring matching},
+  author={Rostami, Mohamad and Majzoobi, Mehrdad and Koushanfar, Farinaz and Wallach, Dan and Devadas, Srinivas},
+  journal={Emerging Topics in Computing, IEEE Transactions on},
+  volume={2},
+  number={1},
+  pages={37--49},
+  year={2014},
+  publisher={IEEE}
 }
 
 % PUF attacks
@@ -247,6 +279,14 @@
   number={4},
   pages={255--269},
   year={2012},
+  publisher={Springer}
+}
+@incollection{bhargava2013high,
+  title={A high reliability PUF using hot carrier injection based response reinforcement},
+  author={Bhargava, Mudit and Mai, Ken},
+  booktitle={Cryptographic Hardware and Embedded Systems-CHES 2013},
+  pages={90--106},
+  year={2013},
   publisher={Springer}
 }
 @inproceedings{xu2013digital,
