--- a/pkuthss/thesis.tex
+++ b/pkuthss/thesis.tex
@@ -35,8 +35,8 @@
 % 设定文档的基本信息。
 \pkuthssinfo{
 	cthesisname = {硕士研究生学位论文}, ethesisname = {Master Thesis},
-	ctitle = {双稳环路PUF建模攻击和新型随机脉冲PUF电路设计},
-	etitle = {Modeling Attack to BRPUF and Circuit Design of A Novel Random Pulse Arbiter PUF},
+	ctitle = {双稳环路PUF建模攻击与改进和新型随机脉冲PUF电路设计},
+	etitle = {Modeling and Improving BRPUF and Circuit Design of A Novel Random Pulse Arbiter PUF},
 	cauthor = {唐文懿},
 	eauthor = {Wenyi Tang},
 	studentid = {1301214150},
@@ -107,6 +107,8 @@
 
 	% 以下为正文之后的部分，默认不进行章节编号。
 	\backmatter
+	% 发表文章
+	\include{chap/papers}
 	% 致谢。
 	\include{chap/acknowledge}
 	% 原创性声明和使用授权说明。
