--- a/pkuthss/thesis.tex
+++ b/pkuthss/thesis.tex
@@ -23,6 +23,7 @@
 \usepackage[backend = biber, style = caspervector, utf8, sorting = none]{biblatex}
 %\usepackage[caption=false,font=footnotesize]{subfig}
 \usepackage{multirow}
+\usepackage{ntheorem}
 
 \graphicspath{{../figure/}}
 \DeclareGraphicsExtensions{.eps,.pdf, .jpg}
@@ -35,8 +36,8 @@
 % 设定文档的基本信息。
 \pkuthssinfo{
 	cthesisname = {硕士研究生学位论文}, ethesisname = {Master Thesis},
-	ctitle = {双稳环路PUF建模攻击与改进和新型随机脉冲PUF电路设计},
-	etitle = {Modeling and Improving BRPUF and Circuit Design of A Novel Random Pulse Arbiter PUF},
+	ctitle = {物理不可克隆函数的建模与设计研究},
+	etitle = {Modeling and Design of Physical Unclonable Functions},
 	cauthor = {唐文懿},
 	eauthor = {Wenyi Tang},
 	studentid = {1301214150},
