make ref. look better

--- a/pkuthss/thesis.bib
+++ b/pkuthss/thesis.bib
@@ -1,13 +1,14 @@
 % vim:ts=4:sw=4
 %%%%%%%%
 % Reviews
+
 @article{shannon1945mathematical,
   title={A mathematical theory of cryptography},
   author={Shannon, Claude E},
   journal={Memorandum MM},
   volume={45},
   pages={110--02},
-  year={1945}
+  date={1945}
 }
 @article{roch1999biopolitics,
   author={Roch,Axel},
