--- a/pkuthss/thesis.tex
+++ b/pkuthss/thesis.tex
@@ -101,7 +101,7 @@
 		% 在这样的情况下，请去掉所有的 sorting 选项，否则可能出错。
 		% 此外，biblatex 3.0 中 \printbibliography 的 sorting 选项失效，
 		% 详见 biblatex-caspervector 的文档。
-		sorting = ecnty
+		sorting = none
 	]
 	% 各附录。
 %	\include{chap/encl1}
