Mod cls to resize fontsize and other things

--- a/pkuthss/thesis.tex
+++ b/pkuthss/thesis.tex
@@ -69,7 +69,7 @@
 	\pagenumbering{Roman}
     
 	% 版权声明。
-	\include{chap/copyright}
+	% \include{chap/copyright}
     
 	% 中英文摘要。
 	\include{chap/abstract}
