--- a/pkuthss/thesis.bib
+++ b/pkuthss/thesis.bib
@@ -39,12 +39,6 @@
   year={2004},
   organization={Springer}
 }
-@book{guajardo2007fpga,
-  title={FPGA intrinsic PUFs and their use for IP protection},
-  author={Guajardo, Jorge and Kumar, Sandeep S and Schrijen, Geert-Jan and Tuyls, Pim},
-  year={2007},
-  publisher={Springer}
-}
 @incollection{standaert2010introduction,
   title={Introduction to side-channel attacks},
   author={Standaert, Fran{\c{c}}ois-Xavier},
@@ -66,7 +60,7 @@
 @incollection{rivain2010provably,
   title={Provably secure higher-order masking of AES},
   author={Rivain, Matthieu and Prouff, Emmanuel},
-  booktitle={Cryptographic Hardware and Embedded Systems, CHES 2010},
+  booktitle={Cryptographic Hardware and Embedded Systems},
   pages={413--427},
   year={2010},
   publisher={Springer}
@@ -74,7 +68,7 @@
 @incollection{ruhrmair2012practical,
   title={Practical security analysis of PUF-based two-player protocols},
   author={R{\"u}hrmair, Ulrich and van Dijk, Marten},
-  booktitle={Cryptographic Hardware and Embedded Systems--CHES 2012},
+  booktitle={Cryptographic Hardware and Embedded Systems},
   pages={251--267},
   year={2012},
   publisher={Springer}
@@ -135,8 +129,8 @@
 }
 @inproceedings{ruhrmair2013pufs,
   title={Pufs in security protocols: Attack models and security evaluations},
-  author={Ruhrmair, Ulrich and van Dijk, Marius},
-  booktitle={Security and Privacy (SP), 2013 IEEE Symposium on},
+  author={R{\"u}hrmair, Ulrich and van Dijk, Marius},
+  booktitle={Security and Privacy (S\&P), 2013 IEEE Symposium on},
   pages={286--300},
   year={2013},
   organization={IEEE}
@@ -183,7 +177,7 @@
 }
 @inproceedings{ruhrmair2014pufs,
   title={PUFs at a glance},
-  author={Ruhrmair, Ulrich and Holcomb, Daniel E},
+  author={R{\"u}hrmair, Ulrich and Holcomb, Daniel E},
   booktitle={Design, Automation and Test in Europe Conference and Exhibition (DATE), 2014},
   pages={1--6},
   year={2014},
@@ -241,7 +235,7 @@
 @incollection{suzuki2010glitch,
   title={The glitch PUF: A new delay-PUF architecture exploiting glitch shapes},
   author={Suzuki, Daisuke and Shimizu, Koichi},
-  booktitle={Cryptographic Hardware and Embedded Systems, CHES 2010},
+  booktitle={Cryptographic Hardware and Embedded Systems},
   pages={366--382},
   year={2010},
   publisher={Springer}
@@ -285,7 +279,7 @@
 @incollection{bhargava2013high,
   title={A high reliability PUF using hot carrier injection based response reinforcement},
   author={Bhargava, Mudit and Mai, Ken},
-  booktitle={Cryptographic Hardware and Embedded Systems-CHES 2013},
+  booktitle={Cryptographic Hardware and Embedded Systems},
   pages={90--106},
   year={2013},
   publisher={Springer}
@@ -447,7 +441,7 @@
 @incollection{katzenbeisser2012pufs,
   title={PUFs: Myth, fact or busted? A security evaluation of physically unclonable functions (PUFs) cast in silicon},
   author={Katzenbeisser, Stefan and Kocaba{\c{s}}, {\"U}nal and Ro{\v{z}}i{\'c}, Vladimir and Sadeghi, Ahmad-Reza and Verbauwhede, Ingrid and Wachsmann, Christian},
-  booktitle={Cryptographic Hardware and Embedded Systems--CHES 2012},
+  booktitle={Cryptographic Hardware and Embedded Systems},
   pages={283--301},
   year={2012},
   publisher={Springer}
@@ -591,19 +585,19 @@
   language = {english},
   organization={ACM}
 }
-@online{Guajardo2007fpga,
+@inproceedings{Guajardo2007fpga,
   title={FPGA Intrinsic PUFs and Their Use for IP Protection},
   author={Guajardo, Jorge and Kumar, Sandeep S and Schrijen, Geert-Jan and Tuyls, Pim},
-  booktitle={Cryptographic Hardware and Embedded Systems - CHES 2007},
+  booktitle={Cryptographic Hardware and Embedded Systems},
   pages={63--80},
   year={2007},
   language = {english},
   organization={Springer}
 }
-@online{kumar2008butterfly,
+@inproceedings{kumar2008butterfly,
   title={The butterfly PUF protecting IP on every FPGA},
   author={Kumar, Sandeep S and Guajardo, Jorge and Maes, Roel and Schrijen, Geert-Jan and Tuyls, Pim},
-  booktitle={Hardware-Oriented Security and Trust, 2008. HOST 2008. IEEE International Workshop on},
+  booktitle={Hardware-Oriented Security and Trust (HOST), 2008 IEEE International Workshop on},
   pages={67--70},
   year={2008},
   language = {english},
