--- a/pkuthss/thesis.tex
+++ b/pkuthss/thesis.tex
@@ -36,18 +36,18 @@
 % 设定文档的基本信息。
 \pkuthssinfo{
 	cthesisname = {硕士研究生学位论文}, ethesisname = {Master Thesis},
-	ctitle = {物理不可克隆函数的建模与~~设计研究},
+	ctitle = {物理不可克隆函数的建模~~~与设计研究},
 	etitle = {Modeling and Design of Physical Unclonable Functions},
 	cauthor = {唐~文~懿},
 	eauthor = {Wenyi Tang},
 	studentid = {1301214150},
-	date = {二〇一六 年 四 月},
+	date = {二〇一六 年 六 月},
 	school = {信息科学技术学院},
 	cmajor = {微电子学与固体电子学}, emajor = {Microelectronics},
 	direction = {系统集成芯片设计及设计方法学},
 	cmentor = {贾嵩~~副教授}, ementor = {Prof.\ Song Jia},
 	ckeywords = {物理不可克隆函数，建模攻击，FPGA，密码学},
-	ekeywords = {Physical Unclonable Function, Modeling attack, FPGAS, Cryptography}
+	ekeywords = {Physical Unclonable Function, Modeling attack, FPGA, Cryptography}
 }
 % 载入参考文献数据库（注意不要省略“.bib”）。
 \addbibresource{thesis.bib}
